--- a/app/src/main/res/layout/activity_first_menu.xml
+++ b/app/src/main/res/layout/activity_first_menu.xml
@@ -22,8 +22,11 @@ android:layout_height="match_parent">
         android:layout_gravity="bottom|center">
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="422dp"
-            android:layout_height="55dp"
+            android:id="@+id/constraintLayout"
+            android:layout_width="0dp"
+            android:layout_height="64dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -31,26 +34,35 @@ android:layout_height="match_parent">
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="164dp"
+                android:layout_marginBottom="8dp"
                 android:text="@string/miniTitle"
                 android:textColor="@color/fontColor"
                 android:textSize="35sp"
                 app:fontFamily="@font/bebasneue_regular"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
                 tools:text="PARK IT!" />
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="44dp"
-                android:layout_height="25dp"
+                android:layout_width="58dp"
+                android:layout_height="35dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
                 android:contentDescription="@string/burguer_button"
                 android:src="@drawable/burger_button"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
         </android.support.constraint.ConstraintLayout>
 
