--- a/app/src/main/res/layout/activity_main_sign_up.xml
+++ b/app/src/main/res/layout/activity_main_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_start"
-    tools:context=".MainActivity">
+    tools:context=".MainSign_up">
 
     <TextView
         android:id="@+id/textView"
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/appTitle"
         android:textColor="@color/fontColor"
-        android:textSize="100sp"
+        android:textSize="80sp"
         android:textStyle="bold"
         app:fontFamily="@font/bebasneue_regular"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,19 +33,20 @@
         android:text="@string/slogan"
         android:textColor="@color/fontColor"
         android:textSize="24sp"
-        app:fontFamily="@font/montserrat_bolditalic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:text="Easy, fast, coinless" />
+        tools:text="Easy, fast, coinless"
+        app:fontFamily="@font/montserrat_bolditalic" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="352dp"
         android:layout_height="52dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="252dp"
+        android:layout_marginBottom="312dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textEmailAddress"
@@ -55,16 +56,63 @@
         app:fontFamily="@font/montserrat_bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:text="@string/Email" />
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="352dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="188dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:text="@string/RepeatPassword"
+        android:textColor="@color/fontColor"
+        android:textSize="25sp"
+        app:fontFamily="@font/montserrat_bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintVertical_bias="0.173" />
+
+    <EditText
+        android:id="@+id/editText4"
+        android:layout_width="352dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="124dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:text="@string/Location"
+        android:textColor="@color/fontColor"
+        android:textSize="25sp"
+        app:fontFamily="@font/montserrat_bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        app:layout_constraintVertical_bias="0.347" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="354dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="252dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textEmailAddress"
@@ -74,7 +122,10 @@
         app:fontFamily="@font/montserrat_bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintVertical_bias="0.173"
         tools:text="@string/Password" />
 
     <Button
@@ -84,34 +135,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="48dp"
-        android:background="@drawable/sign_in_button"
+        android:background="@drawable/sumbit_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="@string/Forgotten_Password"
-        android:textColor="@color/colorFont2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="164dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="@string/sign_up"
-        android:textColor="@color/colorFont2"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
 
 </android.support.constraint.ConstraintLayout>
 
