Added nav bar menu and header.

--- a/app/src/main/res/layout/activity_add_paypal.xml
+++ b/app/src/main/res/layout/activity_add_paypal.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".add_paypal"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimaryDark"
+    tools:context=".add_paypal">
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="88dp"
@@ -15,6 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back" />
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
