--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -17,9 +17,13 @@
             android:icon="@drawable/ic_favorite"
             android:title="Favs" />
         <item
+            android:id="@+id/nav_menu"
+            android:icon="@drawable/back"
+            android:title="Menu" />
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_cancel_black_24dp"
-            android:title="Tools" />
+            android:title="Log Out" />
     </group>
 
 
