--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -16,8 +16,13 @@
             android:icon="@drawable/ic_favorite"
             android:title="Favs" />
         <item
+            android:id="@+id/nav_menu"
+            android:icon="@drawable/back"
+            android:title="Menu" />
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_cancel_black_24dp"
             android:title="Log out" />
+
     </group>
 </menu>
