--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/etPassword"
+        android:id="@+id/etPass"
         android:layout_width="354dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -95,10 +95,10 @@
         android:text="@string/Forgotten_Password"
         android:textColor="@color/colorFont2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/etPass" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvSign"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
