--- a/app/src/main/res/layout/activity_main_sign_up.xml
+++ b/app/src/main/res/layout/activity_main_sign_up.xml
@@ -49,8 +49,8 @@
         android:layout_marginBottom="312dp"
         android:autofillHints=""
         android:ems="10"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:text="@string/Email"
         android:textColor="@color/fontColor"
         android:textSize="25sp"
         app:fontFamily="@font/montserrat_bold"
@@ -58,11 +58,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:text="@string/Email" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/etRepeat"
         android:layout_width="352dp"
         android:layout_height="52dp"
         android:layout_marginStart="8dp"
@@ -71,8 +70,8 @@
         android:layout_marginBottom="188dp"
         android:autofillHints=""
         android:ems="10"
+        android:hint="@string/repeat_password"
         android:inputType="textEmailAddress"
-        android:text="@string/RepeatPassword"
         android:textColor="@color/fontColor"
         android:textSize="25sp"
         app:fontFamily="@font/montserrat_bold"
@@ -80,11 +79,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword"
+        app:layout_constraintTop_toBottomOf="@+id/etPass"
         app:layout_constraintVertical_bias="0.173" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/etLocation"
         android:layout_width="352dp"
         android:layout_height="52dp"
         android:layout_marginStart="8dp"
@@ -93,8 +92,8 @@
         android:layout_marginBottom="124dp"
         android:autofillHints=""
         android:ems="10"
+        android:hint="@string/location"
         android:inputType="textEmailAddress"
-        android:text="@string/Location"
         android:textColor="@color/fontColor"
         android:textSize="25sp"
         app:fontFamily="@font/montserrat_bold"
@@ -102,11 +101,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        app:layout_constraintTop_toBottomOf="@+id/etRepeat"
         app:layout_constraintVertical_bias="0.347" />
 
     <EditText
-        android:id="@+id/etPassword"
+        android:id="@+id/etPass"
         android:layout_width="354dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -115,8 +114,8 @@
         android:layout_marginBottom="252dp"
         android:autofillHints=""
         android:ems="10"
+        android:hint="@string/password"
         android:inputType="textEmailAddress"
-        android:text="@string/Password"
         android:textColor="@color/fontColor"
         android:textSize="25sp"
         app:fontFamily="@font/montserrat_bold"
@@ -125,11 +124,10 @@
         app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail"
-        app:layout_constraintVertical_bias="0.173"
-        tools:text="@string/Password" />
+        app:layout_constraintVertical_bias="0.173" />
 
     <Button
-        android:id="@+id/bLogin"
+        android:id="@+id/bSubmit"
         android:layout_width="329dp"
         android:layout_height="61dp"
         android:layout_marginStart="8dp"
