--- a/app/src/main/res/layout/activity_add_credit_card.xml
+++ b/app/src/main/res/layout/activity_add_credit_card.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText6" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivBack"
         android:layout_width="88dp"
         android:layout_height="52dp"
         android:layout_marginStart="24dp"
@@ -82,7 +82,7 @@
         android:textColor="@color/fontColor"
         android:textSize="45sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/ivBack" />
 
 
     <ImageView
