--- a/app/src/main/res/layout/activity_add_paypal.xml
+++ b/app/src/main/res/layout/activity_add_paypal.xml
@@ -8,7 +8,7 @@
     tools:context=".add_paypal">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivBack"
         android:layout_width="88dp"
         android:layout_height="52dp"
         android:layout_marginStart="24dp"
@@ -28,7 +28,7 @@
         android:textColor="@color/fontColor"
         android:textSize="45sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/ivBack" />
 
     <ImageView
         android:id="@+id/imageView37"
