--- a/app/src/main/res/layout/activity_first_menu.xml
+++ b/app/src/main/res/layout/activity_first_menu.xml
@@ -51,7 +51,7 @@ android:layout_height="match_parent">
                 tools:text="PARK IT!" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/ivBack"
                 android:layout_width="58dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="16dp"
@@ -76,7 +76,7 @@ android:layout_height="match_parent">
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/ivQr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -85,7 +85,7 @@ android:layout_height="match_parent">
             android:src="@drawable/qr" />
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/ivInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -94,7 +94,7 @@ android:layout_height="match_parent">
             android:src="@drawable/checklist" />
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/ivCar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
