--- a/app/src/main/res/layout/activity_floor_info.xml
+++ b/app/src/main/res/layout/activity_floor_info.xml
@@ -38,7 +38,7 @@
             tools:text="PARK IT!" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ivBack"
             android:layout_width="58dp"
             android:layout_height="35dp"
             android:layout_marginStart="16dp"
