--- a/app/src/main/res/layout/activity_navmenu_choosepayment.xml
+++ b/app/src/main/res/layout/activity_navmenu_choosepayment.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivBack"
         android:layout_width="88dp"
         android:layout_height="52dp"
         android:layout_marginStart="24dp"
@@ -86,7 +86,7 @@
         android:textColor="@color/fontColor"
         android:textSize="45sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/ivBack" />
 
     <TextView
         android:id="@+id/textView7"
