--- a/app/src/main/res/layout/activity_qr_generator.xml
+++ b/app/src/main/res/layout/activity_qr_generator.xml
@@ -41,7 +41,7 @@
             tools:text="PARK IT!" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ivBack"
             android:layout_width="58dp"
             android:layout_height="35dp"
             android:layout_marginStart="16dp"
