Accio boto parking

--- a/app/src/main/res/layout/activity_parking_list.xml
+++ b/app/src/main/res/layout/activity_parking_list.xml
@@ -108,7 +108,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:id="@+id/imageView6"
+                    android:id="@+id/ivP1"
                     android:layout_width="208dp"
                     android:layout_height="125dp"
                     android:layout_weight="1"
