--- a/app/src/main/res/layout/activity_parking_info.xml
+++ b/app/src/main/res/layout/activity_parking_info.xml
@@ -126,7 +126,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView19"
+                    android:id="@+id/ivFloor1"
                     android:layout_width="1dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
