--- a/app/src/main/res/layout/activity_add_paypal.xml
+++ b/app/src/main/res/layout/activity_add_paypal.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ivBack" />
 
     <ImageView
-        android:id="@+id/imageView37"
+        android:id="@+id/ivPaypal"
         android:layout_width="139dp"
         android:layout_height="120dp"
         android:layout_marginStart="8dp"
@@ -40,7 +40,7 @@
         android:layout_weight="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.571"
-        app:layout_constraintStart_toEndOf="@+id/imageView36"
+        app:layout_constraintStart_toEndOf="@+id/ivCredit"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/paypal" />
 
@@ -57,7 +57,7 @@
         android:textColor="@color/fontColor"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView37" />
+        app:layout_constraintTop_toBottomOf="@+id/ivPaypal" />
 
 
     U
