--- a/app/src/main/res/layout/activity_add_credit_card.xml
+++ b/app/src/main/res/layout/activity_add_credit_card.xml
@@ -18,7 +18,7 @@
         android:textColor="@color/fontColor"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText6" />
+        app:layout_constraintTop_toBottomOf="@+id/etNumber" />
 
     <TextView
         android:id="@+id/textView10"
@@ -31,7 +31,7 @@
         android:textColor="@color/fontColor"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText6" />
+        app:layout_constraintTop_toBottomOf="@+id/etNumber" />
 
     <ImageView
         android:id="@+id/ivBack"
@@ -86,7 +86,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView25"
+        android:id="@+id/ivSave"
         android:layout_width="147dp"
         android:layout_height="69dp"
         android:layout_gravity="right"
@@ -123,35 +123,37 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/etCardHolder"
         android:layout_width="345dp"
         android:layout_height="50dp"
         android:layout_marginStart="44dp"
         android:ems="10"
         android:fontFamily="@font/montserrat_bold"
+        android:hint="@string/name_and_surname"
         android:inputType="textPersonName"
-        android:text="Name and surname"
         android:textColor="@color/colorFont2"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        android:importantForAutofill="no" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/etNumber"
         android:layout_width="345dp"
         android:layout_height="50dp"
         android:layout_marginStart="40dp"
         android:ems="10"
         android:fontFamily="@font/montserrat_bold"
+        android:hint="Number"
         android:inputType="textPersonName"
-        android:text="Number"
         android:textColor="@color/colorFont2"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        android:importantForAutofill="no" />
 
     <EditText
-        android:id="@+id/editText9"
+        android:id="@+id/etCVV"
         android:layout_width="71dp"
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
@@ -165,7 +167,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/etYearMonth"
         android:layout_width="122dp"
         android:layout_height="55dp"
         android:layout_marginStart="44dp"
