Renamed java classes respecting CamelCase. Added key to project Delete button on Payment methods list not showing Dialog.

--- a/app/src/main/res/layout/activity_floor_info.xml
+++ b/app/src/main/res/layout/activity_floor_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".floor_info"
+    tools:context=".FloorInfoActivity"
     android:background="@color/fontColor">
 
     <android.support.constraint.ConstraintLayout
