--- a/app/src/main/res/layout/activity_add_credit_card.xml
+++ b/app/src/main/res/layout/activity_add_credit_card.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".add_credit_card"
+    tools:context=".AddCreditCardActivity"
     android:background="@color/colorPrimaryDark">
 
     <TextView
