--- a/app/src/main/res/layout/activity_add_paypal.xml
+++ b/app/src/main/res/layout/activity_add_paypal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context=".add_paypal">
+    tools:context=".AddPaypalActivity">
 
     <ImageView
         android:id="@+id/ivBack"
