--- a/app/src/main/res/layout/activity_main_sign_up.xml
+++ b/app/src/main/res/layout/activity_main_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_start"
-    tools:context=".MainSign_up">
+    tools:context=".MainSignUpActivity">
 
     <TextView
         android:id="@+id/textView"
